# django-with-strawberry-graphql

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml
src/: manage.py
src/account/: types.py
src/core/: schema.py
src/django_with_strawberry_grahpql/: asgi.py  settings.py  urls.py  wsgi.py
